--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "npm": "6.14.6"
   },
   "scripts": {
+     "build": "cd server && npm install  && cd ../client && npm install && npm run build",
     "start": "node server/index.js",
     "backend": "nodemon server/index.js",
     "frontend": "npm run start --prefix client",
